# Mini-infer

./: .clang-format  .conanignore  .gitignore  CMakeLists.txt  CMakePresets.json  COMPLETE_DELIVERY_SUMMARY.md  CONTRIBUTING.md  DYNAMIC_SHAPE_PROGRESS.md  LICENSE  MEMORY_PLANNER_README.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  build.ps1  build.sh  conanfile.py  requirements.txt
cmake/: ConfigureONNX.cmake
docs/: ADDING_NEW_KERNELS.md  API.md  ARCHITECTURE.md  BUILD.md  BUILD_SCRIPT_USAGE.md  COMPONENT_DIAGRAM.md  CONAN_BUILD_GUIDE.md  CONAN_MIGRATION.md  CONAN_OPTIONS_GUIDE.md  DYNAMIC_SHAPE_SUPPORT.md  DYNAMIC_SHAPE_TENSORRT_LEVEL_PLAN.md  FUSION_PASS_OPTYPE_OPTIMIZATION.md  FUSION_PATTERN_OPTYPE_OPTIMIZATION.md  GETTING_STARTED.md  HYBRID_ARCHITECTURE_BENEFITS_ANALYSIS.md  HYBRID_ARCHITECTURE_OPTIMIZATION_SUGGESTIONS.md  MEMORY_PLANNER_DELIVERY.md  ONNX_PARSER_DESIGN.md  OPERATOR_STRING_CONSTANTS_UPDATE.md  OP_TYPES_ARCHITECTURE.md  OP_TYPES_IMPLEMENTATION_CHECKLIST.md  OP_TYPES_QUICK_REFERENCE.md  OP_TYPES_SUMMARY.md  OP_TYPE_FILES_EXPLANATION.md  OP_TYPE_FINAL_DELIVERY.md  OP_TYPE_HYBRID_IMPLEMENTATION.md  OP_TYPE_README.md  OP_TYPE_REAL_WORLD_EXAMPLE.md  OptimizationPass.md  QUICK_REFERENCE_SHAPE_INFERENCE.md  SHAPE_INFERENCE.md  SHAPE_INFERENCE_ARCHITECTURE.md  TENSORRT_STYLE_GUIDE.md  memory_management.md  memory_planner_architecture.md  memory_planner_design.md  memory_planner_overview.md  memory_planner_quickstart.md  memory_planner_summary.md  memory_planner_usage.md
examples/: CMAKE_UPDATE.md  CMakeLists.txt  LENET5_COMPLETION_SUMMARY.md  LENET5_IMPROVEMENTS.md  LENET5_README.md  bert_inference.cpp  build_graph.cpp  conv2d_example.cpp  dynamic_shape_advanced.cpp  dynamic_shape_basic.cpp  lenet5_cuda_inference.cpp  lenet5_dynamic_multi_batch.cpp  lenet5_inference.cpp  lenet5_onnx_test.cpp  lenet5_optimized_inference.cpp  lenet5_optimized_with_memory_planning.cpp  linear_example.cpp  memory_tracking_example.cpp  onnx_parser_example.cpp  pooling_example.cpp  relu_example.cpp  shape_inference_demo.cpp  simple_inference.cpp
examples/utils/: simple_loader.h
include/mini_infer/: mini_infer.h
include/mini_infer/backends/: backend.h  cpu_backend.h  device_context.h
include/mini_infer/core/: allocator.h  buffer.h  op_type.h  tensor.h  types.h
include/mini_infer/graph/: fusion_pass.h  graph.h  graph_optimizer.h  node.h
include/mini_infer/importers/: builtin_operators.h  model_importer.h  onnx_parser.h  operator_importer.h  weight_importer.h
include/mini_infer/kernels/: bias.h  gemm.h  im2col.h  kernel_base.h  kernel_registry.h  kernel_registry_template.h  kernel_types.h  pooling.h  transpose.h
include/mini_infer/operators/: activation_type.h  conv2d.h  cpu_plugin.h  cuda_plugin.h  flatten.h  generic_operator.h  linear.h  operator.h  plugin_base.h  plugin_operator_adapter.h  plugin_registry.h  pooling.h  relu.h  reshape.h  softmax.h
include/mini_infer/runtime/: engine.h  execution_context.h  inference_plan.h  memory_planner.h  optimization_profile.h  shape_inference_engine.h
include/mini_infer/utils/: logger.h
models/python/bert/: export_bert_tiny.py
models/python/lenet5/: MNIST_SAMPLES_GUIDE.md  README.md  __init__.py  benchmark_optimization.bat  benchmark_optimization.ps1  benchmark_optimization.sh  compare_memory_usage.bat  compare_memory_usage.ps1  compare_memory_usage.py  (+27 more)
src/backends/: CMakeLists.txt  backend.cpp  cpu_backend.cpp  device_context.cpp
src/backends/cpu/: cpu_allocator.cpp
src/backends/cuda/: cuda_allocator.cpp  cuda_device_context.cpp
src/core/: CMakeLists.txt  allocator.cpp  op_type.cpp  tensor.cpp  types.cpp
src/graph/: CMakeLists.txt  fusion_pass.cpp  graph.cpp  graph_optimizer.cpp  node.cpp
src/importers/: CMakeLists.txt  attribute_helper.cpp  builtin_operators.cpp  model_importer.cpp  onnx_parser.cpp  operator_importer.cpp  weight_importer.cpp
src/kernels/: CMakeLists.txt  README.md  kernel_registry.cpp
src/kernels/cpu/: bias_cpu.cpp  conv2d_cpu.cpp  flatten_cpu.cpp  gemm_cpu.cpp  im2col_cpu.cpp  linear_cpu.cpp  pooling_cpu.cpp  relu_cpu.cpp  reshape_cpu.cpp  softmax_cpu.cpp  transpose_cpu.cpp
src/kernels/cuda/: bias_cuda.cu  conv2d_cuda.cu  flatten_cuda.cu  gemm_cuda.cu  im2col_cuda.cu  linear_cuda.cu  pooling_cuda.cu  relu_cuda.cu  reshape_cuda.cu  softmax_cuda.cu  transpose_cuda.cu
src/operators/: CMakeLists.txt  conv2d.cpp  flatten.cpp  linear.cpp  operator.cpp  plugin_registry.cpp  pooling.cpp  relu.cpp  reshape.cpp  softmax.cpp
src/operators/cpu/: add_cpu.cpp  cast_cpu.cpp  concat_cpu.cpp  constant_of_shape_cpu.cpp  conv2d_cpu.cpp  div_cpu.cpp  equal_cpu.cpp  erf_cpu.cpp  expand_cpu.cpp  flatten_cpu.cpp  gather_cpu.cpp  gelu_cpu.cpp  layernorm_cpu.cpp  linear_cpu.cpp  matmul_cpu.cpp  mul_cpu.cpp  pooling_cpu.cpp  pow_cpu.cpp  reduce_mean_cpu.cpp  relu_cpu.cpp  reshape_cpu.cpp  shape_cpu.cpp  slice_cpu.cpp  softmax_cpu.cpp  sqrt_cpu.cpp  squeeze_cpu.cpp  sub_cpu.cpp  tanh_cpu.cpp  transpose_cpu.cpp  unsqueeze_cpu.cpp  where_cpu.cpp
src/operators/cuda/: add_cuda.cu  cast_cuda.cu  conv2d_cuda.cu  div_cuda.cu  erf_cuda.cu  flatten_cuda.cu  gather_cuda.cu  gelu_cuda.cu  layernorm_cuda.cu  linear_cuda.cu  matmul_cuda.cu  mul_cuda.cu  pooling_cuda.cu  pow_cuda.cu  reduce_mean_cuda.cu  relu_cuda.cu  reshape_cuda.cu  slice_cuda.cu  softmax_cuda.cu  sqrt_cuda.cu  squeeze_cuda.cu  sub_cuda.cu  tanh_cuda.cu  transpose_cuda.cu  unsqueeze_cuda.cu
src/runtime/: CMakeLists.txt  engine.cpp  execution_context.cpp  inference_plan.cpp  memory_planner.cpp  optimization_profile.cpp  shape_inference_engine.cpp
src/utils/: CMakeLists.txt  logger.cpp
tests/: CMakeLists.txt  test_allocator.cpp  test_backend.cpp  test_conv2d.cpp  test_device_context.cpp  test_dynamic_shape_runtime.cpp  test_engine_with_profile.cpp  test_flatten.cpp  test_graph.cpp  test_kernel_registry.cpp  test_linear.cpp  test_logger.cpp  test_operators.cpp  test_optimization_profile.cpp  test_pooling.cpp  test_reshape.cpp  test_shape_inference.cpp  test_shape_inference_engine.cpp  test_softmax.cpp  test_tensor.cpp  test_tensor_shape.cpp
(+8 files in other folders)
